tests/unit/default/syntax-error/066-create-table-columns.x.t
---- IN ----
+%table(id:int,name:string)|
---- OUT ----
---- ERR ----
syntax: expected EOL after `...me:string)` near `|` at position 27 - at line 1
---- EXIT ----
1
